--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,12 +15,55 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+@layer utilities{
+
+  /*gradient text on Website like github*/
+  .text-gradient{
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-box-decoration-break: clone;
   }
-  body {
-    color: white;
-    background: black;
+
+  .label-design{
+
+    input{
+      display:none;
+    }
+
+    label{
+      float:right;
+      display:inline-block;
+      background:white;
+      cursor: pointer;
+      transition:all .3s;
+    }
+
+    .rating label{
+      width:1rem;
+      height:1rem;
+      border-radius:100%; 
+      margin: 0 8px;
+    }
+
+    .rating label:hover
+    {
+      box-shadow: 0 0 0 4px #2eccd1,
+      inset 0 0 0 8px black;
+    } 
+
+    .rating input:checked ~ label {
+      background:black;
+      box-shadow: 0 0 0 4px #2eccd1;
+      
+    }
+
   }
+
 }
